adds ensemblgenomes as additional site to ensembldl

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,9 @@ script:
     pub/release-93/bed/ensembl-compara/70_mammals.gerp_constrained_element/gerp_constrained_elements.bos_taurus
     pub/pre/fasta/cdna/felis_catus/fcatus_cat_protein_cdna
   - >-
+    bash ensembldl.sh -g -v -p 2 /tmp/db
+    pub/release-42/metazoa/fasta/helobdella_robusta/ncrna/Helobdella_robusta.Helro1.ncrna.fa
+  - >-
     bash ebidl.sh -v -p 2 /tmp/db
     pub/databases/gencode/Gencode_human/release_28/gencode.v28.metadata.Entrez
   - tree -a /tmp/db
