--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -2,7 +2,15 @@
 
 name: flake8
 
-on: [push]
+on:
+  pull_request:
+    paths:
+      - .github/workflows/flake8.yml
+      - '**.py'
+  push:
+    paths:
+      - .github/workflows/flake8.yml
+      - '**.py'
 
 jobs:
   flake8:
